Header/Section1/Section2 Faite HTML

--- a/style.css
+++ b/style.css
@@ -1,13 +1,47 @@
 #Page_Complete
 
 
-
 #Logo
-
 
 
 #Naviguation
 
 
 
+
+
+#Section1
+
 #Formulaire
+
+#Economique
+
+#Familial
+
+#Romantique
+
+#Animaux
+
+
+
+
+
+#Section2
+
+#Hebergement1
+
+#Figure1
+
+#Figure2
+
+#Figure3
+
+
+#Hebergement2
+
+#Figure4
+
+#Figure5
+
+#Figure6
+
