Main Fini html debut Footer

--- a/style.css
+++ b/style.css
@@ -36,6 +36,8 @@
 #Figure3
 
 
+
+
 #Hebergement2
 
 #Figure4
@@ -47,6 +49,7 @@
 
 
 
+
 #Aside
 
 #Populaire1
@@ -54,3 +57,20 @@
 #Populaire2
 
 #Populaire3
+
+
+
+
+#Section3
+
+#Activité1
+
+#Activité2
+
+#Activité3
+
+#Activité4
+
+#Activité5
+
+#Activité6
