--- a/style.css
+++ b/style.css
@@ -112,26 +112,49 @@ header
 }
 
 
+/* Filtre Economique */
 
-.classe_filtre p
+.Filter
 {
+	display: flex;
+	align-items: center;
 	border: 1px solid #F2F2F2;
 	border-radius: 15px 15px 15px 15px;
-	width: 175px;
-
+	height: 34px;
+	position: relative;
+	margin-left: 7px;
 }
 
-
-.classe_filtre i
+.filter_text
 {
+	padding-right: 10px;
+	padding-left: 35px;
+}
+
+.Filter i
+{
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	background-color: #DEEBFF;
 	color: #0065FC;
-	padding: 10px;
 	border-radius: 50%;
 	margin-right: 10px;
+	position: absolute;
+    top: -1px;
+    left: -7px;
+    height: 36px;
+    width: 36px;
 }
 
 
+
+
+#Logement
+{
+	display: flex;
+	align-items: baseline;
+}
 
 
 
