--- a/style.css
+++ b/style.css
@@ -210,8 +210,8 @@ header
 	background-color: #F2F2F2;
 	width: 63%;
 	border-radius: 15px;
-	float: left;
 	height: 475px;
+	float: left;
 }
 
 #Section2 h2
@@ -273,8 +273,8 @@ header
 	background-color: #F2F2F2;
 	width: 34%;
 	border-radius: 15px;
-	float: right;
 	height: 475px;
+	float: right;
 }
 
 #Aside h2
@@ -312,6 +312,11 @@ header
 
 
 /* SECTION 3 */
+
+#Section3
+{
+	clear: both;
+}
 
 
 #Section3 h2
