--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ header
 	display: flex;
 	justify-content: space-between;
 	padding-top: 10px;
+	margin-bottom: 20px;
 }
 
 
@@ -62,7 +63,8 @@ header
 #Section1 h1 + p
 {
 	margin-top: 5px;
-	font-size: 0.9em;
+	font-size: 0.8em;
+	margin-bottom: 10px;
 }
 
 
@@ -73,6 +75,7 @@ header
 #Form p
 {
 	display: flex;
+	margin-bottom: 10px;
 }
 
 
@@ -81,15 +84,16 @@ header
 	background-color: #F2F2F2;
 	padding-left: 12px;
 	padding-right: 10px;
-	padding-top: 6px;
+	padding-top: 4px;
 	padding-bottom: 5px;
 	border-radius: 35% 0% 0% 35%;
+	height: 32px;
 }
 
 
 #Form input
 {
-	height: 26px;
+	height: 32px;
 	border: 0.5px solid #F2F2F2;
 }
 
@@ -99,7 +103,7 @@ header
 	background-color: #0065FC;
 	color: white;
 	border-radius: 0 8px 8px 0;
-	height: 29px !important;
+	height: 32px !important;
 }
 
 
@@ -196,8 +200,10 @@ figure
 
 #Logement p
 {
-	margin-left: 10px;
-	font-size: 0.9em;
+	margin-left: 8px;
+	font-size: 0.8em;
+	margin-top: 10px;
+	margin-bottom: 25px;
 }
 
 #Logement i
@@ -224,7 +230,7 @@ figure
 	background-color: #F2F2F2;
 	width: 63%;
 	border-radius: 15px;
-	height: 475px;
+	height: 490px;
 	float: left;
 }
 
@@ -232,15 +238,16 @@ figure
 {
 	margin-left: 25px;
 	margin-bottom: 0;
-	font-size: 1.2em;
+	font-size: 1.1em;
 	font-weight: bold;
-	margin-top: 15.936px;
+	margin-top: 20px;
 }
 
 #Section2 p
 {
-	margin-left: 40px;
+	margin-left: 25px;
 	margin-top: 12px;
+	margin-bottom: 15px;
 	font-weight: bold;
 	font-size: 1em;
 }
@@ -248,12 +255,12 @@ figure
 .span
 {
 	font-weight: bold;
-	font-size: 0.95em;
+	font-size: 0.85em;
 }
 
 .span2
 {
-	font-size: 0.9em;
+	font-size: 0.75em;
 }
 
 #Hebergement1
@@ -283,7 +290,7 @@ figure
 {
 	background-color: white;
     border: 3.5px solid white;
-    border-radius: 12px;
+    border-radius: 18px;
     margin-right: 0px;
     margin-left: 25px;
 }
@@ -301,9 +308,9 @@ figure
 #Aside
 {
 	background-color: #F2F2F2;
-	width: 34%;
+	width: 32%;
 	border-radius: 15px;
-	height: 475px;
+	height: 490px;
 	float: right;
 }
 
@@ -311,8 +318,12 @@ figure
 {
 	margin-left: 25px;
 	text-align: center;
-	font-size: 1.2em;
+	font-size: 1.1em;
     font-weight: bold;
+    margin-block-start: 20px;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
 }
 
 .aside figure
@@ -320,6 +331,9 @@ figure
 	background-color: white;
     border: 3.5px solid white;
     border-radius: 12px;
+    height: 120px;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .aside img
@@ -330,6 +344,12 @@ figure
 .aside i
 {
 	color: #0065FC;
+	margin-top: 22px;
+}
+
+.aside figcaption
+{
+	margin-left: 10px;
 }
 
 
@@ -353,9 +373,9 @@ figure
 
 #Section3 h2
 {
- 	padding-top: 35px;
+ 	padding-top: 40px;
  	margin-bottom: 0;
- 	font-size: 1.2em;
+ 	font-size: 1.1em;
     font-weight: bold;
 }
 
@@ -378,7 +398,7 @@ figure
 .Activite figure
 {
 	background-color: #f0f0f0;
-    border-radius: 12px;
+    border-radius: 18px;
     margin-right: 0px;
     margin-left: 25px;
 }
@@ -398,19 +418,24 @@ figure
 	display: flex;
 	background-color: #F2F2F2;
 	margin-top: 25px;
+	padding-top: 25px;
+	padding-bottom: 15px;
+	margin-bottom: 15px;
 }
 
 
 #footer h3
 {
 	font-weight: bold;
-	font-size: 1.1em;
+	font-size: 1em;
+	margin-bottom: 15px;
 }
 
 
 #footer p
 {
-	font-size: 0.9em;
+	font-size: 0.8em;
+	margin-bottom: 8px;
 }
 
 
