--- a/style.css
+++ b/style.css
@@ -442,16 +442,19 @@ figure
 #A_propos
 {
 	margin-left: 50px;
+	width: 80%;
 }
 
 
 #Nos_Hebergements
 {
-	margin-left: 130px;
+	margin-left: 115px;
+	width: 70%;
 }
 
 
 #Assistance
 {
-	margin-left: 160px;
+	margin-left: 130px;
+	width: 40%;
 }
