--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header
 {
 	display: flex;
 	justify-content: space-between;
-	padding-top: 30px;
+	padding-top: 10px;
 	margin-bottom: 20px;
 }
 
@@ -76,26 +76,26 @@ header
 
 /* FORMULAIRE */
 
-#Form p
+#form p
 {
 	display: flex;
 	margin-bottom: 10px;
 }
 
 
-#Form label
+#form label
 {
 	background-color: #F2F2F2;
-	padding-left: 12px;
+	padding-left: 10px;
 	padding-right: 10px;
-	padding-top: 4px;
+	padding-top: 9px;
 	padding-bottom: 5px;
 	border-radius: 35% 0% 0% 35%;
-	height: 32px;
+	height: 22px;
 }
 
 
-#Form input
+#form input
 {
 	height: 32px;
 	border: 0.5px solid #F2F2F2;
@@ -107,7 +107,7 @@ header
 	background-color: #0065FC;
 	color: white;
 	border-radius: 0 8px 8px 0;
-	height: 32px !important;
+	height: 36px !important;
 }
 
 
@@ -120,6 +120,7 @@ header
 {
 	display: flex;
 	align-items: baseline;
+	margin-top: 25px;
 }
 
 #regroupe
@@ -216,7 +217,7 @@ figure
 {
 	margin-left: 8px;
 	font-size: 0.8em;
-	margin-top: 10px;
+	margin-top: 25px;
 	margin-bottom: 25px;
 }
 
@@ -251,7 +252,7 @@ figure
 	background-color: #F2F2F2;
 	width: 63%;
 	border-radius: 15px;
-	height: 490px;
+	height: 465px;
 	float: left;
 }
 
@@ -332,20 +333,18 @@ figure
 	background-color: #F2F2F2;
 	width: 32%;
 	border-radius: 15px;
-	height: 490px;
+	height: 465px;
 	float: right;
 }
 
 #aside_conteneur h2
 {
-	margin-left: 25px;
-	text-align: center;
 	font-size: 1.1em;
     font-weight: bold;
-    margin-block-start: 20px;
-    margin-block-end: 0.83em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+    display: flex;
+    text-align: center;
+	justify-content: space-around;
+	margin-top: 20px;
 }
 
 .aside figure
@@ -353,7 +352,7 @@ figure
 	background-color: white;
     border: 3.5px solid white;
     border-radius: 12px;
-    height: 120px;
+    height: 105px;
     margin-left: 30px;
     margin-right: 30px;
 }
@@ -368,6 +367,8 @@ figure
 	color: #0065FC;
 	margin-top: 22px;
 }
+
+
 
 .aside figcaption
 {
