--- a/style.css
+++ b/style.css
@@ -274,15 +274,18 @@ figure
 	font-size: 1em;
 }
 
-.span
+.name_accommodation
 {
+	margin-top: 5px;
 	font-weight: bold;
-	font-size: 0.85em;
+	font-size: 0.90em;
 }
 
-.span2
+.price_accomodation
 {
-	font-size: 0.75em;
+	font-size: 0.9em;
+    font-weight: normal;
+    margin-top: 0px;
 }
 
 #hebergement1
@@ -365,7 +368,6 @@ figure
 .aside i
 {
 	color: #0065FC;
-	margin-top: 22px;
 }
 
 
@@ -373,6 +375,9 @@ figure
 .aside figcaption
 {
 	margin-left: 10px;
+	display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 
