--- a/style.css
+++ b/style.css
@@ -507,41 +507,94 @@ figure
 
 
 
+
+
 .bloc_grid
 {
 	display: grid;
 	width: 1000px;
-	height: 310px;
+	height: 306px;
 	margin-top: 80px;
 	margin-bottom: 80px;
-	background-color: #e3e3e3;
+	background-color: #427ef5;
 	grid-template-columns: auto auto auto auto;
-	grid-template-rows: auto auto;
 	grid-gap: 20px;
 }
 
-.items
+.bloc_grid p
 {
-	border: 2px solid green;
+	margin: 0px;
 }
+
+.bloc_grid img
+{
+	border-radius: 16px 16px 0 0;
+}
+
 
 
 .items1
 {
-	background-color: #e3e3e3;
-	border: 2px solid green;
+	background-color: #f0f0f0;
 	grid-column-start: 1;
   	grid-column-end: 1;
   	grid-row-start: 1;
-  	grid-row-end: 3;
+	grid-row-end: 3;
+	height: 306px;
+	width: 225px;  
+	border-radius: 16px;
 }
+
+
+
+.items2
+{
+	background-color: #f0f0f0;
+	width: 205px;
+	height: 172px;
+	border-radius: 16px;
+}
+
+
 
 .items3
 {
-	background-color: #e3e3e3;
-	border: 2px solid green;
+	background-color: #f0f0f0;
 	grid-column-start: 3;
   	grid-column-end: 3;
   	grid-row-start: 1;
-  	grid-row-end: 3;
+	grid-row-end: 3;
+	height: 306px;
+	width: 225px;
+	border-radius: 16px;
+}
+
+
+
+.items4
+{
+	background-color: #f0f0f0;
+	width: 205px;
+	height: 120px;
+	border-radius: 16px;
+}
+
+
+
+.items5
+{
+	background-color: #f0f0f0;
+	width: 205px;
+	height: 114px;
+	border-radius: 16px;
+}
+
+
+
+.items6
+{
+	background-color: #f0f0f0;
+	width: 205px;
+	height: 125px;
+	border-radius: 16px;
 }
