--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ header
 
 #naviguation
 {
-	display: flex
+	display: flex;
+	align-items: baseline;
 }
 
 #naviguation nav
@@ -73,6 +74,7 @@ header
 	font-size: 0.85em;
 	font-weight: bold;
 	color: #0065FC;
+	margin-left: 40px;
 }
 
 
@@ -263,7 +265,13 @@ figure
 
 .fa-star
 {
-	font-size: 0.75em;
+	font-size: 0.70em;
+	color: #0065FC;
+}
+
+.grey
+{
+	color: #F2F2F2;
 }
 
 
@@ -294,6 +302,13 @@ figure
 	font-size: 1em;
 }
 
+
+#section2 figcaption
+{
+	padding-left: 10px;
+}
+
+
 .name_accommodation
 {
 	margin-top: 5px;
@@ -305,7 +320,8 @@ figure
 {
 	font-size: 0.75em;
     font-weight: normal;
-    margin-top: 0px;
+	margin-top: 5px;
+	color: black;
 }
 
 #hebergement1
@@ -315,7 +331,7 @@ figure
 
 #hebergement1 i
 {
-	color: #0065FC;
+	margin-top: 6px;
 }
 
 
@@ -327,7 +343,7 @@ figure
 
 #hebergement2 i
 {
-	color: #0065FC;
+	margin-top: 6px;
 }
 
 .photo figure
@@ -384,14 +400,10 @@ figure
 	border-radius: 10px 0px 0px 10px;
 }
 
-.aside i
-{
-	color: #0065FC;
-}
 
 .aside figcaption
 {
-	margin-left: 10px;
+	margin-left: 15px;
 	display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -561,6 +573,14 @@ figure
 
 /* FOOTER */
 
+#pos
+{
+	display: flex;
+	width: 1000px;
+	margin: auto;
+}
+
+
 #footer
 {
 	display: flex;
@@ -589,26 +609,23 @@ figure
 
 #a_propos
 {
-	margin-left: 50px;
-	width: 80%;
 	display: flex;
 	flex-direction: column;
+	width: 33.33%;
 }
 
 
 #nos_hebergements
 {
-	margin-left: 115px;
-	width: 70%;
 	display: flex;
 	flex-direction: column;
+	width: 33.33%;
 }
 
 
 #assistance
 {
-	margin-left: 130px;
-	width: 40%;
 	display: flex;
 	flex-direction: column;
+	width: 33.33%;
 }
