--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header
 {
 	display: flex;
 	justify-content: space-between;
-	padding-top: 20px;
+	padding-top: 30px;
 	margin-bottom: 20px;
 }
 
@@ -100,29 +100,26 @@ header
 
 
 /* FORMULAIRE */
-
-#form p
+#form
 {
 	display: flex;
-	margin-bottom: 10px;
 }
 
 
 #form label
 {
 	background-color: #F2F2F2;
-	padding-left: 10px;
-	padding-right: 10px;
-	padding-top: 9px;
-	padding-bottom: 5px;
-	border-radius: 35% 0% 0% 35%;
-	height: 22px;
+    border-radius: 35% 0% 0% 35%;
+    height: 35px;
+    width: 35px;
+    padding-left: 12px;
+    padding-top: 8px;
 }
 
 
 #form input
 {
-	height: 32px;
+	height: 35px;
 	border: 0.5px solid #F2F2F2;
 }
 
@@ -132,7 +129,10 @@ header
 	background-color: #0065FC;
 	color: white;
 	border-radius: 0 8px 8px 0;
-	height: 36px !important;
+	width: 100px;
+	font-family: 'Raleway', sans-serif;
+	font-weight: bold;
+	font-size: 0.80em;
 }
 
 
