--- a/style.css
+++ b/style.css
@@ -473,100 +473,89 @@ figure
 .bloc_grid
 {
 	display: grid;
-	height: 306px;
 	margin-top: 15px;
 	grid-template-columns: repeat(4, 1fr);
 	grid-gap: 20px;
 	margin-bottom: 40px;
 }
 
-.bloc_grid p
-{
-	margin-top: 5px;
-	margin-left: 15px;
-	font-weight: bold;
-	font-size: 0.9em;
-}
 
 .bloc_grid img
 {
-	border-radius: 16px 16px 0 0;
+	border-radius: 16px;
 	width: 100%;
+	height: 100%;
 
 }
 
 
 .items1
 {
-	background-color: #f0f0f0;
 	grid-column-start: 1;
   	grid-column-end: 1;
   	grid-row-start: 1;
 	grid-row-end: 4;
-	height: 306px; 
-	border-radius: 16px;
+	position: relative;
+}
+
+.title_grid
+{
+	position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 40px;
+    background-color: #e8e8e8;
+    border-radius: 0 0 16px 16px;
+    padding-left: 15px;
+    padding-top: 12px;
+    font-size: 0.80em;
 }
 
 
 .items2
 {
-	background-color: #f0f0f0;
-	height: 172px;
-	border-radius: 16px;
 	grid-column-start: 2;
   	grid-column-end: 2;
   	grid-row-start: 1;
 	grid-row-end: 3;
+	position: relative;
 }
-
 
 .items3
 {
-	background-color: #f0f0f0;
 	grid-column-start: 3;
   	grid-column-end: 3;
   	grid-row-start: 1;
-	grid-row-end: 5;
-	height: 306px;
-	border-radius: 16px;
+	grid-row-end: 4;
+	position: relative;
 }
-
 
 .items4
 {
-	background-color: #f0f0f0;
-	height: 135px;
-	border-radius: 16px;
 	grid-column-start: 4;
 	grid-column-end: 4;
 	grid-row-start: 1;
-  grid-row-end: 2;
+	grid-row-end: 2;
+	position: relative;
 }
-
 
 .items5
 {
-	background-color: #f0f0f0;
-	height: 110px;
-	border-radius: 16px;
 	grid-column-start: 2;
 	grid-column-end: 2;
 	grid-row-start: 3;
-  grid-row-end: 4;
+	grid-row-end: 4;
+	position: relative;
 }
-
 
 .items6
 {
-	background-color: #f0f0f0;
-	height: 151px;
-	border-radius: 16px;
 	grid-column-start: 4;
 	grid-column-end: 4;
 	grid-row-start: 2;
-  grid-row-end: 4;
+	grid-row-end: 4;
+	position: relative;  
 }
-
 
 
 
