--- a/stylemobile.css
+++ b/stylemobile.css
@@ -1,10 +1,17 @@
 
+*
+{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+
 #page_complete
 {
 	width: auto;
 	margin: auto;
 }
-
 
 
 
@@ -118,29 +125,58 @@
 
 
 
+
 /* SECTION 3 */
 
-#section3
+.bloc_grid
 {
-	width: 386px;
-	margin: auto;
-	clear: none;
+	display: grid;
+	grid-template: auto / repeat(12, 1fr);
+}
+
+.items1, .items2, .items3, .items4, .items5, .items6
+{
+	grid-column-start: 1;
+	grid-column-end: span 12;
+}
+
+.items1
+{
+	grid-row-start: 1;
+	grid-row-end: 1;
+}
+
+.items2
+{
+	grid-row-start: 2;
+	grid-row-end: 2;
+}
+
+.items3
+{
+	grid-row-start: 4;
+	grid-row-end: 4;
+}
+
+.items4
+{
+	grid-row-start: 5;
+	grid-row-end: 5;
+}
+
+.items5
+{
+	grid-row-start: 3;
+	grid-row-end: 3;
+}
+
+.items6
+{
+	grid-row-start: 6;
+	grid-row-end: 6;
 }
 
 
-
-.activite img
-{
-	width: 386px;
-	height: 141px;
-}
-
-
-#conteneur
-{
-	display: flex;
-	flex-direction: column;
-}
 
 
 
@@ -149,31 +185,25 @@
 
 /* FOOTER */
 
-
-#footer
+#pos
 {
-	width: 100%;
-	margin: auto;
+	display: inline;
 }
-
-
 
 #a_propos
 {
-	margin-left: 50px;
 	margin-top: 0px;
+	width: 90%;
 }
-
 
 #nos_hebergements
 {
-	margin-left: 50px;
 	margin-top: 28px;
+	width: 65%;
 }
-
 
 #assistance
 {
-	margin-left: 50px;
 	margin-top: 28px;
+	width: 45%;
 }
