--- a/style.css
+++ b/style.css
@@ -357,7 +357,8 @@ figure
 .photo figure
 {
 	background-color: white;
-    border: 3.5px solid white;
+	border: 3.5px solid white;
+	box-shadow: 1px 1px 10px 0px #c5c5c5;
     border-radius: 14px;
     margin-right: 0px;
 	margin-left: 25px;
@@ -399,7 +400,8 @@ figure
 .aside figure
 {
 	background-color: white;
-    border: 3.5px solid white;
+	border: 3.5px solid white;
+	box-shadow: 1px 1px 10px 0px #c5c5c5;
     border-radius: 12px;
     height: 105px;
     margin-left: 30px;
@@ -496,7 +498,6 @@ figure
 	border-radius: 16px;
 	width: 100%;
 	height: 100%;
-
 }
 
 
@@ -516,11 +517,12 @@ figure
     bottom: 0px;
     width: 100%;
     height: 40px;
-    background-color: #e8e8e8;
-    border-radius: 0 0 16px 16px;
+    background-color: white;
+    border-radius: 0 0 15px 15px;
     padding-left: 15px;
     padding-top: 12px;
-    font-size: 0.80em;
+	font-size: 0.80em;
+	box-shadow: 1px 1px 10px 0px #c5c5c5
 }
 
 
